--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,3 +1,3 @@
 fweelindir = $(datadir)/fweelin
 
-fweelin_DATA = .fweelin.rc patches-channels.xml basic.sf2 vera.ttf verabd.ttf
+fweelin_DATA = *.txt *.xml basic.sf2 vera.ttf verabd.ttf
