git-svn-id: http://freewheeling.svn.sourceforge.net/svnroot/freewheeling@78 0fdad95a-1c26-0410-b110-fdbcfc9fafa3

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,3 +1,3 @@
 fweelindir = $(datadir)/fweelin
 
-fweelin_DATA = *.txt *.xml basic.sf2 vera.ttf verabd.ttf
+fweelin_DATA = *.txt *.xml basic.sf2 vera.ttf verabd.ttf gdb-stackdump-cmds
