--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,6 @@
 # Process this file with autoconf to produce a configure script.
 AC_INIT(src/fweelin.cc)
-AM_INIT_AUTOMAKE(fweelin,0.6)
+AM_INIT_AUTOMAKE(fweelin,0.61)
 AC_CONFIG_SRCDIR([src/fweelin.cc])
 #AM_CONFIG_HEADER(config.h)
 
@@ -36,6 +36,9 @@ AC_CHECK_FUNC(filledPieRGBA, [AC_DEFINE(CAPITAL_FILLED_PIE)])
 AC_CHECK_LIB([SDL_ttf], [main], , 
   [AC_MSG_ERROR(VIDEO: You need libsdl-ttf2.0-dev installed.
 		http://www.libsdl.org/projects/SDL_ttf/)])
+
+AC_CHECK_LIB([lo], [main], , [AC_MSG_ERROR(CONFIG: You need liblo-dev installed.
+             http://http://liblo.sourceforge.net/)])
 
 AC_CHECK_LIB([xml2], [main], , 
   [AC_MSG_ERROR(CONFIG: You need libxml2-dev installed.
